--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -155,23 +155,24 @@
     }
   }
 
-  .resume-item-title,
-  .resume-item-details,
-  .resume-item-copy,
-  .resume-item-list {
-    a {
-      color: #333;
-      text-decoration: none;
-      border-bottom: 1px solid;
-
-      &:hover {
-        border-bottom: none;
-        color: #9c9c9c;
-      }
-    }
-  }
+  // .resume-item-title,
+  // .resume-item-details,
+  // .resume-item-copy,
+  // .resume-item-list {
+  // }
 
   .resume-item-copy { margin: .75rem 0 0; }
+}
+
+a {
+  color: #2079c7;
+  text-decoration: none;
+  // border-bottom: 1px solid;
+
+  &:hover {
+    border-bottom: none;
+    color: #9c9c9c;
+  }
 }
 
 // footer styles
